tests/tests/snapshots/golden__ir__quickstart.snap
---
source: tests/tests/golden.rs
expression: json
---
{
  "name": "Notes",
  "multi_service": false,
  "services": [
    {
      "id": 0,
      "name": "Notes"
    }
  ],
  "nodes": [
    {
      "id": 0,
      "service": 0,
      "kind": "Database",
      "name": "default",
      "engine": "Postgres"
    },
    {
      "id": 1,
      "service": 0,
      "kind": "Queue",
      "name": "default",
      "engine": "Nats"
    },
    {
      "id": 2,
      "service": null,
      "kind": "Stream",
      "name": "NoteArchived",
      "subject": "notes.note_archived",
      "record": 0
    },
    {
      "id": 3,
      "service": 0,
      "kind": "Api",
      "name": "Note",
      "request": 0,
      "config": {
        "method": "Post",
        "path": null,
        "scope": null
      }
    },
    {
      "id": 4,
      "service": 0,
      "kind": "Service",
      "name": "NoteStore",
      "signature": null
    },
    {
      "id": 5,
      "service": 0,
      "kind": "Api",
      "name": "ArchiveNoteRoute",
      "request": 0,
      "config": {
        "method": "Post",
        "path": "/notes/archive",
        "scope": null
      }
    },
    {
      "id": 6,
      "service": 0,
      "kind": "Worker",
      "name": "LogArchive",
      "config": {
        "concurrency": 1,
        "max_retries": 2
      }
    },
    {
      "id": 7,
      "service": 0,
      "kind": "Service",
      "name": "ArchiveNote",
      "signature": {
        "params": [
          [
            "note",
            {
              "Record": 0
            }
          ]
        ],
        "return_ty": {
          "Record": 0
        },
        "locals": [
          {
            "Record": 0
          }
        ],
        "body": [
          {
            "Transaction": {
              "body": [
                {
                  "Expr": {
                    "VerbCall": {
                      "capability": 0,
                      "verb": {
                        "DbInsert": 0
                      },
                      "args": [
                        {
                          "RecordCons": {
                            "record": 1,
                            "base_value": null,
                            "fields": [
                              [
                                "id",
                                {
                                  "BuiltinCall": "UuidNew"
                                }
                              ],
                              [
                                "note_id",
                                {
                                  "FieldAccess": {
                                    "base": {
                                      "Local": {
                                        "slot": 0,
                                        "ty": {
                                          "Record": 0
                                        }
                                      }
                                    },
                                    "field": "id",
                                    "ty": "Uuid"
                                  }
                                }
                              ]
                            ]
                          }
                        }
                      ],
                      "ty": {
                        "Record": 1
                      }
                    }
                  }
                }
              ]
            }
          },
          {
            "Return": {
              "Local": {
                "slot": 0,
                "ty": {
                  "Record": 0
                }
              }
            }
          }
        ]
      }
    },
    {
      "id": 8,
      "service": 0,
      "kind": "Service",
      "name": "RecordArchiveEvent",
      "signature": {
        "params": [
          [
            "note",
            {
              "Record": 0
            }
          ]
        ],
        "return_ty": {
          "Record": 0
        },
        "locals": [
          {
            "Record": 0
          }
        ],
        "body": [
          {
            "Return": {
              "Local": {
                "slot": 0,
                "ty": {
                  "Record": 0
                }
              }
            }
          }
        ]
      }
    }
  ],
  "edges": [
    {
      "id": 0,
      "from": 2,
      "to": 1,
      "kind": "DependsOn"
    },
    {
      "id": 1,
      "from": 3,
      "to": 4,
      "kind": "RequestFlow"
    },
    {
      "id": 2,
      "from": 4,
      "to": 0,
      "kind": "DataFlow"
    },
    {
      "id": 3,
      "from": 2,
      "to": 6,
      "kind": "AsyncMessage"
    },
    {
      "id": 4,
      "from": 7,
      "to": 0,
      "kind": "DataFlow"
    },
    {
      "id": 5,
      "from": 5,
      "to": 7,
      "kind": "RequestFlow"
    },
    {
      "id": 6,
      "from": 7,
      "to": 2,
      "kind": "AsyncMessage"
    },
    {
      "id": 7,
      "from": 6,
      "to": 8,
      "kind": "RequestFlow"
    }
  ],
  "records": [
    {
      "name": "Note",
      "fields": [
        {
          "name": "id",
          "ty": {
            "type": "Uuid"
          }
        },
        {
          "name": "title",
          "ty": {
            "type": "Str"
          }
        },
        {
          "name": "body",
          "ty": {
            "type": "Str"
          }
        }
      ],
      "kind": "Data"
    },
    {
      "name": "ArchiveEvent",
      "fields": [
        {
          "name": "id",
          "ty": {
            "type": "Uuid"
          }
        },
        {
          "name": "note_id",
          "ty": {
            "type": "Uuid"
          }
        }
      ],
      "kind": "Data"
    }
  ],
  "tables": [
    {
      "name": "ArchiveEvents",
      "record": 1,
      "service": 0,
      "db_instance": 0
    }
  ],
  "pipelines": [
    {
      "name": "ArchiveNoteRoute",
      "service": 0,
      "owner": 5,
      "payload": 0,
      "steps": [
        {
          "step": "Handler",
          "node": 7
        },
        {
          "step": "Publish",
          "stream": 2
        },
        {
          "step": "Return"
        }
      ]
    },
    {
      "name": "LogArchive",
      "service": 0,
      "owner": 6,
      "payload": 0,
      "steps": [
        {
          "step": "Handler",
          "node": 8
        }
      ]
    }
  ],
  "resources": [
    {
      "name": "Note",
      "service_owner": 0,
      "api": 3,
      "service": 4,
      "database": 0,
      "cache": null,
      "auth": null,
      "record": 0,
      "config": {
        "cache_ttl": 300,
        "page_size": 100,
        "read_scope": null,
        "write_scope": null
      }
    }
  ],
  "event_streams": []
}
