tests/tests/snapshots/golden__ir__routed-media.snap
---
source: tests/tests/golden.rs
expression: json
---
{
  "name": "RoutedMedia",
  "nodes": [
    {
      "id": 0,
      "kind": "Auth",
      "name": "default",
      "scheme": "Jwt"
    },
    {
      "id": 1,
      "kind": "Database",
      "name": "default",
      "engine": "Postgres"
    },
    {
      "id": 2,
      "kind": "Cache",
      "name": "default",
      "engine": "Redis"
    },
    {
      "id": 3,
      "kind": "Queue",
      "name": "default",
      "engine": "Nats"
    },
    {
      "id": 4,
      "kind": "Stream",
      "name": "Uploaded",
      "subject": "media.uploaded",
      "record": 0
    },
    {
      "id": 5,
      "kind": "Stream",
      "name": "Transcoded",
      "subject": "routed_media.transcoded",
      "record": 0
    },
    {
      "id": 6,
      "kind": "Stream",
      "name": "DeadLetters",
      "subject": "routed_media.dead_letters",
      "record": 0
    },
    {
      "id": 7,
      "kind": "Api",
      "name": "Upload",
      "request": 0,
      "config": {
        "method": "Put",
        "path": "/videos",
        "scope": "videos:write"
      }
    },
    {
      "id": 8,
      "kind": "Worker",
      "name": "Transcoder",
      "config": {
        "concurrency": 4,
        "max_retries": 2
      }
    },
    {
      "id": 9,
      "kind": "Worker",
      "name": "Notifier",
      "config": {
        "concurrency": 1,
        "max_retries": 0
      }
    },
    {
      "id": 10,
      "kind": "Worker",
      "name": "DeadLetterSink",
      "config": {
        "concurrency": 1,
        "max_retries": 0
      }
    },
    {
      "id": 11,
      "kind": "Api",
      "name": "Clip",
      "request": 0,
      "config": {
        "method": "Post",
        "path": null,
        "scope": null
      }
    },
    {
      "id": 12,
      "kind": "Service",
      "name": "ClipStore"
    },
    {
      "id": 13,
      "kind": "Service",
      "name": "StoreVideo"
    },
    {
      "id": 14,
      "kind": "Service",
      "name": "Transcode"
    },
    {
      "id": 15,
      "kind": "Service",
      "name": "Notify"
    },
    {
      "id": 16,
      "kind": "Service",
      "name": "SendNotification"
    },
    {
      "id": 17,
      "kind": "Service",
      "name": "ArchiveFailure"
    }
  ],
  "edges": [
    {
      "id": 0,
      "from": 4,
      "to": 3,
      "kind": "DependsOn"
    },
    {
      "id": 1,
      "from": 5,
      "to": 3,
      "kind": "DependsOn"
    },
    {
      "id": 2,
      "from": 6,
      "to": 3,
      "kind": "DependsOn"
    },
    {
      "id": 3,
      "from": 4,
      "to": 8,
      "kind": "AsyncMessage"
    },
    {
      "id": 4,
      "from": 5,
      "to": 9,
      "kind": "AsyncMessage"
    },
    {
      "id": 5,
      "from": 6,
      "to": 10,
      "kind": "AsyncMessage"
    },
    {
      "id": 6,
      "from": 11,
      "to": 0,
      "kind": "RequestFlow"
    },
    {
      "id": 7,
      "from": 0,
      "to": 12,
      "kind": "RequestFlow"
    },
    {
      "id": 8,
      "from": 12,
      "to": 1,
      "kind": "DataFlow"
    },
    {
      "id": 9,
      "from": 12,
      "to": 2,
      "kind": "DataFlow"
    },
    {
      "id": 10,
      "from": 13,
      "to": 1,
      "kind": "DataFlow"
    },
    {
      "id": 11,
      "from": 13,
      "to": 2,
      "kind": "DataFlow"
    },
    {
      "id": 12,
      "from": 7,
      "to": 0,
      "kind": "RequestFlow"
    },
    {
      "id": 13,
      "from": 0,
      "to": 13,
      "kind": "RequestFlow"
    },
    {
      "id": 14,
      "from": 13,
      "to": 4,
      "kind": "AsyncMessage"
    },
    {
      "id": 15,
      "from": 14,
      "to": 1,
      "kind": "DataFlow"
    },
    {
      "id": 16,
      "from": 14,
      "to": 2,
      "kind": "DataFlow"
    },
    {
      "id": 17,
      "from": 15,
      "to": 1,
      "kind": "DataFlow"
    },
    {
      "id": 18,
      "from": 15,
      "to": 2,
      "kind": "DataFlow"
    },
    {
      "id": 19,
      "from": 8,
      "to": 14,
      "kind": "RequestFlow"
    },
    {
      "id": 20,
      "from": 14,
      "to": 15,
      "kind": "RequestFlow"
    },
    {
      "id": 21,
      "from": 15,
      "to": 5,
      "kind": "AsyncMessage"
    },
    {
      "id": 22,
      "from": 14,
      "to": 6,
      "kind": "AsyncMessage"
    },
    {
      "id": 23,
      "from": 16,
      "to": 1,
      "kind": "DataFlow"
    },
    {
      "id": 24,
      "from": 16,
      "to": 2,
      "kind": "DataFlow"
    },
    {
      "id": 25,
      "from": 9,
      "to": 16,
      "kind": "RequestFlow"
    },
    {
      "id": 26,
      "from": 17,
      "to": 1,
      "kind": "DataFlow"
    },
    {
      "id": 27,
      "from": 17,
      "to": 2,
      "kind": "DataFlow"
    },
    {
      "id": 28,
      "from": 10,
      "to": 17,
      "kind": "RequestFlow"
    }
  ],
  "records": [
    {
      "name": "Video",
      "fields": [
        {
          "name": "id",
          "ty": {
            "type": "Uuid"
          }
        },
        {
          "name": "title",
          "ty": {
            "type": "Str"
          }
        },
        {
          "name": "status",
          "ty": {
            "type": "Enum",
            "variants": [
              "Ready",
              "Failed"
            ]
          }
        }
      ]
    }
  ],
  "pipelines": [
    {
      "name": "Upload",
      "owner": 7,
      "payload": 0,
      "steps": [
        {
          "step": "Auth",
          "node": 0
        },
        {
          "step": "Handler",
          "node": 13
        },
        {
          "step": "Publish",
          "stream": 4
        },
        {
          "step": "Return"
        }
      ]
    },
    {
      "name": "Transcoder",
      "owner": 8,
      "payload": 0,
      "steps": [
        {
          "step": "Handler",
          "node": 14
        },
        {
          "step": "Match",
          "field": "status",
          "arms": [
            {
              "label": "Ready",
              "steps": [
                {
                  "step": "Handler",
                  "node": 15
                },
                {
                  "step": "Publish",
                  "stream": 5
                }
              ]
            },
            {
              "label": "Failed",
              "steps": [
                {
                  "step": "Publish",
                  "stream": 6
                }
              ]
            }
          ]
        }
      ]
    },
    {
      "name": "Notifier",
      "owner": 9,
      "payload": 0,
      "steps": [
        {
          "step": "Handler",
          "node": 16
        }
      ]
    },
    {
      "name": "DeadLetterSink",
      "owner": 10,
      "payload": 0,
      "steps": [
        {
          "step": "Handler",
          "node": 17
        }
      ]
    }
  ],
  "resources": [
    {
      "name": "Clip",
      "api": 11,
      "service": 12,
      "database": 1,
      "cache": 2,
      "auth": 0,
      "record": 0,
      "config": {
        "cache_ttl": 60,
        "page_size": 50
      }
    }
  ],
  "event_streams": []
}
